--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   sqflite: ^1.1.5
   url_launcher: ^5.0.2
   image_picker: ^0.7.5
+  image_cropper: ^1.4.0
 
 dev_dependencies:
   flutter_test:
